# priximmo

./: .gitignore  LICENSE  PLAN.md  README.md  config.yml  main.py  main2.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  data-refresh.yml  python-app.yml
config/: default.yml
scripts/: generate_readme_charts.py
src/immo/: __init__.py  __main__.py  cli.py  config.py
src/immo/analysis/: __init__.py  decision.py  forecasting.py  rates.py  signals.py  trends.py
src/immo/renovation/: __init__.py  charts.py  estimator.py  models.py
src/immo/scrapers/: __init__.py  dvf.py  insee.py  interest_rates.py
src/immo/utils/: __init__.py  filters.py  geo.py
src/immo/viz/: __init__.py  decision.py  market.py  reports.py  signals.py
tests/: conftest.py  test_config.py  test_dvf.py  test_filters.py  test_rates.py  test_renovation.py  test_signals.py  test_trends.py
