[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "immo"
version = "1.0.0"
description = "French real estate market analysis, buy/sell signals, and renovation cost estimation"
license = "MIT"
authors = [{name = "Charles Dhainaut"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "scipy>=1.12",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "pyyaml>=6.0",
    "typer[all]>=0.12",
    "prophet>=1.1",
    "scikit-learn>=1.4",
    "httpx>=0.27",
    "tenacity>=8.2",
    "loguru>=0.7",
    "pyarrow>=14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.3",
    "mypy>=1.9",
    "pandas-stubs",
]

[project.scripts]
immo = "immo.cli:app"

[project.urls]
Repository = "https://github.com/cdhainaut/priximmo"

[tool.hatch.build.targets.wheel]
packages = ["src/immo"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[[tool.mypy.overrides]]
module = ["prophet.*", "loguru.*", "tenacity.*", "httpx.*", "seaborn.*"]
ignore_missing_imports = true
