[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "immo"
version = "1.0.0"
description = "French real estate market analysis, buy/sell signals, and renovation cost estimation"
license = "MIT"
authors = [{name = "Charles Dhainaut"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "scipy>=1.12",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "pyyaml>=6.0",
    "typer[all]>=0.12",
    "prophet>=1.1",
    "scikit-learn>=1.4",
    "httpx>=0.27",
    "tenacity>=8.2",
    "loguru>=0.7",
    "pyarrow>=14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.3",
    "mypy>=1.9",
    "pandas-stubs",
]

[project.scripts]
immo = "immo.cli:app"

[project.urls]
Repository = "https://github.com/cdhainaut/priximmo"

[tool.hatch.build.targets.wheel]
packages = ["src/immo"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B904", "B905", "SIM108", "SIM102", "SIM114", "UP007"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]
"scripts/*" = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
exclude = [
    "src/immo/viz/",
    "src/immo/renovation/charts.py",
    "src/immo/scrapers/",
    "src/immo/analysis/decision.py",
    "src/immo/analysis/forecasting.py",
    "src/immo/config.py",
    "scripts/",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[[tool.mypy.overrides]]
module = ["prophet.*", "loguru.*", "tenacity.*", "httpx.*", "seaborn.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["immo.viz.*", "immo.renovation.charts"]
disallow_untyped_calls = false
disallow_any_expr = false
warn_return_any = false
